fix overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -1000,6 +1000,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-visible {
+  overflow: visible;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
 }
